--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "next": "13.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-loading-indicators": "^0.0.11",
+    "socket.io-client": "^4.5.4",
     "typescript": "4.9.4"
   }
 }
