--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,21 +1,3 @@
 {
-    "env": {
-        "browser": true,
-        "es2021": true,
-        "jest": true
-    },
-     "extends": ["eslint:recommended", "plugin:react/recommended", "plugin:prettier/recommended"],
-
-    "overrides": [
-    ],
-    "parserOptions": {
-        "ecmaVersion": "latest",
-        "sourceType": "module"
-    },
-    "plugins": [
-        "react"
-    ],
-    "rules": {
-      "react/react-in-jsx-scope": "off"
-    }
+  "extends": "next/core-web-vitals"
 }
